Add minimum stability to composer file

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Nordstrom authentication middleware",
     "keywords": ["nordstrom", "authentication", "middleware"],
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Julián May",
