--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,8 @@
         }
     ],
     "type": "project",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/jlnmay/persistent-storage"
-        }
-    ],
     "require": {
-        "php": ">=5.4",
-        "jlnmay/persistent-storage": "dev-master"
-        
+        "php": ">=5.4"
     },
 	"require-dev": {
 		"phpunit/phpunit": "5.2.*"
